plugins {
    id 'application'
    id 'java-library'
    id 'maven-publish'
    id 'org.javamodularity.moduleplugin' version '1.8.9'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id "org.beryx.jlink" version "3.1.0-rc-1"
    id 'com.gradleup.shadow' version '8.3.5'
}

repositories {
    mavenCentral()
}

group = 'com.defalut'
version = '1.0-release'
description = 'fsmng'
java.sourceCompatibility = JavaVersion.VERSION_21
java.targetCompatibility = JavaVersion.VERSION_21

dependencies {
    /* JavaFX */
    implementation 'org.openjfx:javafx-fxml:21'
    implementation 'org.openjfx:javafx-controls:21'
    /* Log4j */
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-iostreams:2.20.0'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

// Javadoc
tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}
javadoc {
    source = sourceSets.main.allJava
    destinationDir = layout.buildDirectory.dir("docs/javadoc").get().asFile
}

javafx {
    version = 21
    modules = ['javafx.controls', 'javafx.fxml']
}

application {
    mainClass = 'com.defalut.fsmanager.MainLauncher'
    mainModule = 'com.defalut.fsmanager'
}

jar {
    manifest {
        attributes  'Main-Class': 'com.defalut.fsmanager.MainLauncher',
                'Module-Name': 'com.defalut.fsmanager'
    }
}

jlink {
    options = [
            '--strip-debug',
            '--compress', '1',
            '--no-header-files',
            '--no-man-pages',
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
    launcher {
        name = 'fsmanager'
    }

    forceMerge('log4j-api', 'log4j-core', 'log4j-iostreams')

    jpackage {
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
            imageOptions += ['--win-console']
        }
        if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
            installerOptions += ['--mac-package-identifier', 'com.defalut.fsmanager']
            imageOptions += ['--mac-package-name', 'fsmanager']
        }
        if (org.gradle.internal.os.OperatingSystem.current().linux) {
            installerOptions += ['--linux-package-name', 'fsmanager']
            imageOptions += ['--linux-package-name', 'fsmanager']
        }
    }

    sourceSets {
        main {
            java {
                srcDirs = ['src/main/java']
            }
            resources {
                srcDirs = ['src/main/resources']
            }
        }
    }

    shadowJar {
        archiveBaseName = 'fsmanager'
        archiveVersion = '1.0-release'
        manifest {
            attributes(
                    'Main-Class': 'com.defalut.fsmanager.MainLauncher',
                    'Module-Name': 'com.defalut.fsmanager'
            )
        }
    }


}

